// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components Chat on element click triggers changeChat function 1`] = `
<li
  class="btn p-0 px-1 text-nowrap overflow-hidden btn-primary"
  data-testid="Item"
>
  LoFi Tokyo
</li>
`;

exports[`components Chat renders active chat 1`] = `
<div
  class="flex-fill"
  data-testid="ActiveChat"
>
  <iframe
    allow="accelerometer; encrypted-media; gyroscope; picture-in-picture; web-share"
    allowfullscreen=""
    height="100%"
    referrerpolicy="strict-origin-when-cross-origin"
    sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-storage-access-by-user-activation"
    src="https://www.youtube.com/live_chat?v=7XXu_-eoxHo&embed_domain=localhost"
    title="youtube chat"
    width="100%"
  />
</div>
`;

exports[`components Chat renders alternative element when passing video list with no livestreamChat 1`] = `
<div
  class="m-auto"
  data-testid="EmptyList"
>
  Add a video to see the chat
</div>
`;

exports[`components Chat renders visible Chat component 1`] = `
<div
  class="chat"
  data-testid="Chat"
>
  <ul
    class="chat-list"
  >
    <li
      class="btn p-0 px-1 text-nowrap overflow-hidden btn-primary"
      data-testid="Item"
    >
      LoFi Tokyo
    </li>
    <li
      class="btn p-0 px-1 text-nowrap overflow-hidden btn-secondary"
      data-testid="Item"
    >
      The Japanese Town
    </li>
  </ul>
  <div
    class="flex-fill"
    data-testid="ActiveChat"
  >
    <iframe
      allow="accelerometer; encrypted-media; gyroscope; picture-in-picture; web-share"
      allowfullscreen=""
      height="100%"
      referrerpolicy="strict-origin-when-cross-origin"
      sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-storage-access-by-user-activation"
      src="https://www.youtube.com/live_chat?v=7XXu_-eoxHo&embed_domain=localhost"
      title="youtube chat"
      width="100%"
    />
  </div>
</div>
`;

exports[`components Navbar properly calls addVideo prop only when input and select field values are not null 1`] = `
<button
  class="btn btn-primary py-0 px-2 fw-bold text-uppercase"
  data-testid="handleAddVideo"
  type="button"
/>
`;

exports[`components Navbar renders Navbar component with passed props 1`] = `
<nav
  class="navbar"
  data-testid="Navbar"
>
  <form
    class="d-flex flex-row gap-1"
  >
    <fieldset>
      <label
        class="d-none text-capitalize"
        for="host"
      >
        Select host
      </label>
      <select
        class="px-1"
        data-testid="hostSelect"
        id="host"
        name="host"
      >
        <option
          data-testid="hostOption"
          value=""
        >
          Select host
        </option>
        <option
          data-testid="hostOption"
          value="youtube"
        >
          Youtube
        </option>
        <option
          data-testid="hostOption"
          value="youtube-playlist"
        >
          Youtube Playlist
        </option>
        <option
          data-testid="hostOption"
          value="twitch"
        >
          Twitch
        </option>
        <option
          data-testid="hostOption"
          value="twitch-vod"
        >
          Twitch Vod
        </option>
        <option
          data-testid="hostOption"
          value="dailymotion"
        >
          Dailymotion
        </option>
        <option
          data-testid="hostOption"
          value="dailymotion-playlist"
        >
          Dailymotion Playlist
        </option>
        <option
          data-testid="hostOption"
          value="vimeo"
        >
          Vimeo
        </option>
        <option
          data-testid="hostOption"
          value="m3u8"
        >
          m3u8
        </option>
      </select>
    </fieldset>
    <fieldset>
      <label
        class="d-none text-capitalize"
        for="userInput"
      >
        Link or id
      </label>
      <input
        class="px-1"
        data-testid="userInput"
        id="userInput"
        name="userInput"
        placeholder="Link or id"
        type="text"
        value=""
      />
    </fieldset>
    <button
      class="btn btn-primary py-0 px-2 fw-bold text-uppercase"
      data-testid="handleAddVideo"
      type="button"
    />
  </form>
</nav>
`;

exports[`components Navbar renders input field and select with options elements matching hostList, properly changes select and input values 1`] = `
<select
  class="px-1"
  data-testid="hostSelect"
  id="host"
  name="host"
>
  <option
    data-testid="hostOption"
    value=""
  >
    Select host
  </option>
  <option
    data-testid="hostOption"
    value="youtube"
  >
    Youtube
  </option>
  <option
    data-testid="hostOption"
    value="youtube-playlist"
  >
    Youtube Playlist
  </option>
  <option
    data-testid="hostOption"
    value="twitch"
  >
    Twitch
  </option>
  <option
    data-testid="hostOption"
    value="twitch-vod"
  >
    Twitch Vod
  </option>
  <option
    data-testid="hostOption"
    value="dailymotion"
  >
    Dailymotion
  </option>
  <option
    data-testid="hostOption"
    value="dailymotion-playlist"
  >
    Dailymotion Playlist
  </option>
  <option
    data-testid="hostOption"
    value="vimeo"
  >
    Vimeo
  </option>
  <option
    data-testid="hostOption"
    value="m3u8"
  >
    m3u8
  </option>
</select>
`;

exports[`components Navbar renders input field and select with options elements matching hostList, properly changes select and input values 2`] = `
<option
  data-testid="hostOption"
  value=""
>
  Select host
</option>
`;

exports[`components Navbar renders input field and select with options elements matching hostList, properly changes select and input values 3`] = `
<input
  class="px-1"
  data-testid="userInput"
  id="userInput"
  name="userInput"
  placeholder="Link or id"
  type="text"
  value=""
/>
`;

exports[`components Playlist remove function returns video to be removed, reorder buttons are disabled 1`] = `
<button
  class="btn btn-danger rounded-0 p-0"
  data-testid="RemoveVid"
  typeof="button"
/>
`;

exports[`components Playlist renders items from playlist prop 1`] = `
<div
  class="video"
>
  <img
    alt="Playlist80's Tokyo Vibes thumbnail"
    height="90"
    src="https://i.ytimg.com/vi/7XXu_-eoxHo/default.jpg"
    width="130"
  />
  <p
    class="flex-grow-1 m-0"
    data-testid="title"
  >
    Playlist80's Tokyo Vibes
  </p>
  <div
    class="d-flex flex-column justify-content-between"
  >
    <button
      class="btn btn-danger rounded-0 p-0"
      data-testid="RemoveVid"
      typeof="button"
    />
    <button
      class="btn btn-warning rounded-0 p-0"
      data-testid="MoveVidUp"
      disabled=""
      typeof="button"
    />
    <button
      class="btn btn-warning rounded-0 p-0"
      data-testid="MoveVidDown"
      typeof="button"
    />
  </div>
</div>
`;

exports[`components Playlist renders visible Playlist component 1`] = `
<div
  class="playlist visible"
  data-testid="Playlist"
>
  <ul
    class="container"
  >
    <li
      data-testid="Item"
    >
      <div
        class="video"
      >
        <img
          alt="Playlist80's Tokyo Vibes thumbnail"
          height="90"
          src="https://i.ytimg.com/vi/7XXu_-eoxHo/default.jpg"
          width="130"
        />
        <p
          class="flex-grow-1 m-0"
          data-testid="title"
        >
          Playlist80's Tokyo Vibes
        </p>
        <div
          class="d-flex flex-column justify-content-between"
        >
          <button
            class="btn btn-danger rounded-0 p-0"
            data-testid="RemoveVid"
            typeof="button"
          />
          <button
            class="btn btn-warning rounded-0 p-0"
            data-testid="MoveVidUp"
            disabled=""
            typeof="button"
          />
          <button
            class="btn btn-warning rounded-0 p-0"
            data-testid="MoveVidDown"
            typeof="button"
          />
        </div>
      </div>
    </li>
    <li
      data-testid="Item"
    >
      <div
        class="video"
      >
        <div
          class="placeholder position-relative"
        />
        <p
          class="flex-grow-1 m-0"
          data-testid="title"
        >
          Nostalgic Lofi Hip Hop Beats
        </p>
        <div
          class="d-flex flex-column justify-content-between"
        >
          <button
            class="btn btn-danger rounded-0 p-0"
            data-testid="RemoveVid"
            typeof="button"
          />
          <button
            class="btn btn-warning rounded-0 p-0"
            data-testid="MoveVidUp"
            typeof="button"
          />
          <button
            class="btn btn-warning rounded-0 p-0"
            data-testid="MoveVidDown"
            disabled=""
            typeof="button"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`components Playlist reorder function returns video and its new index on the list 1`] = `
<button
  class="btn btn-warning rounded-0 p-0"
  data-testid="MoveVidUp"
  typeof="button"
/>
`;

exports[`components Playlist reorder function returns video and its new index on the list 2`] = `
<button
  class="btn btn-warning rounded-0 p-0"
  data-testid="MoveVidDown"
  disabled=""
  typeof="button"
/>
`;
